--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,14 +1,12 @@
 [phases.setup]
-nixPkgs = ["python310", "nodejs-18_x"]
+nixPkgs = ["python310", "nodejs_18"]
 
 [phases.install]
 cmds = [
-    "pip install -r requirements.txt",
+    "python3 -m pip install --upgrade pip",
+    "python3 -m pip install -r requirements.txt",
     "cd web_app && npm install && npm run build && cd .."
 ]
 
-[phases.build]
-cmds = ["echo 'Build complete'"]
-
 [start]
-cmd = "uvicorn main:app --host 0.0.0.0 --port ${PORT:-8000}"
+cmd = "python3 -m uvicorn main:app --host 0.0.0.0 --port ${PORT:-8000}"
