--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,12 +1,11 @@
 [phases.setup]
-nixPkgs = ["python310", "nodejs_18"]
+nixPkgs = ["python310", "nodejs_18", "python310Packages.pip", "python310Packages.setuptools"]
 
 [phases.install]
 cmds = [
-    "python3 -m pip install --upgrade pip",
-    "python3 -m pip install -r requirements.txt",
+    "pip install -r requirements.txt",
     "cd web_app && npm install && npm run build && cd .."
 ]
 
 [start]
-cmd = "python3 -m uvicorn main:app --host 0.0.0.0 --port ${PORT:-8000}"
+cmd = "uvicorn main:app --host 0.0.0.0 --port ${PORT:-8000}"
